Fix spacing on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
     background-color: #121212;
     color: #E0E0E0;
     margin: 0;
-    padding: 0;
+    padding-bottom: 100px;
 }
 
 #header {
@@ -46,6 +46,7 @@ body {
     padding-top: 10px;
     padding-left: 20px;
     padding-right: 20px;
+    padding-bottom: 80px;
     overflow-y: auto;
 }
 
